src/app/create-campaign/campaign-confirmation/campaign-confirmation.style.css
h3 {
  width: 75%;
  text-align: center;
}

.box {
    width:70%;
    padding: 2em;
    background:#f2f2f2;
    margin-top: 40px;
  /*  margin:40px;*/
    -webkit-box-shadow: 0 10px 6px -6px #777;
       -moz-box-shadow: 0 10px 6px -6px #777;
            box-shadow: 0 10px 6px -6px #777;
}

.chosen-lists {
  background-color: #ff6193;
  color: white;
  border-radius: 3px;
  padding: 1em;
  margin-bottom: 0.5em;
  max-width: 500px;
  width: 100%;
  word-wrap: break-word;
  white-space: inherit
}

